# QtAgOpenGPS-plugin

./: CMakeLists.txt  agiointerface.h  echowindow.cpp  echowindow.h  formgps.cpp  formgps.h  main.cpp
QtAgIO/: CMakeLists.txt  agioplugin.cpp  agioplugin.h  agioqmlsettings.cpp  agioqmlsettings.h  agioqmlsettings_addkeys.cpp  agiosettings.cpp  agiosettings.h  formloop.cpp  formloop_ui.cpp
classes/: cabline.cpp  cabline.h
plugin/: CMakeLists.txt  agioplugin.cpp  agioplugin.h
